# AP4A

./: .gitignore  CMakeLists.txt  README.md  main.cpp  text.txt
include/: HumiditySensor.h  LightSensor.h  Scheduler.h  Sensor.h  Sensor.hpp  Server.h  SoundSensor.h  TemperatureSensor.h
src/: HumiditySensor.cpp  LightSensor.cpp  Scheduler.cpp  Sensor.cpp  Server.cpp  SoundSensor.cpp  TemperatureSensor.cpp
